--- a/web/index.html
+++ b/web/index.html
@@ -1,18 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <title>project</title>
-        <script src="function.js"></script>
-    </head>
 
-    <body>
-        <script>
-            var initScript = document.createElement("script");
-            initScript.src = "./init.js";
-            document.body.appendChild(initScript);
-        </script>
-        <div id="MapContianer" style="width: 90%; height: 90%; position: absolute"></div>
-    </body>
+<head>
+    <title>project</title>
+    <script src="function.js"></script>
+    <script src="camera.js"></script>
+    <script src="water.js"></script>
+</head>
 
-    <div id="my_div" style="background: cornsilk; position: relative; z-index: 2; width: 100px; height: 30px"></div>
+<body>
+    <script>
+        var initScript = document.createElement("script");
+        initScript.src = "./init.js";
+        document.body.appendChild(initScript);
+    </script>
+    <div id="MapContianer" style="width: 90%; height: 90%; position: absolute"></div>
+</body>
+
+<div id="my_div" style="background: cornsilk; position: relative; z-index: 2; width: 100px; height: 30px"></div>
+
 </html>
