--- a/web/main/index.html
+++ b/web/main/index.html
@@ -9,15 +9,11 @@
     </head>
 
     <div id="my_div" style="background: cornsilk; position: relative; z-index: 2; width: 200px; height: 30px">
+        <input type="button" value="reset" onClick="reset();" />
         <input type="button" value="intro" onClick="intro();" />
         <input type="button" value="gameOver" onClick="gameOver();" /> </br>
         <input type="button" value="up" onClick="water_up();" />
         <input type="button" value="down" onClick="water_down();" /></br>
-        <input type="button" value="clear" onClick="ui_clear();" />
-        <input type="button" value="hp" onClick="ui_hp();" />
-        <input type="button" value="up" onClick="ui_up();" />
-        <input type="button" value="down" onClick="ui_down();" />
-        <input type="button" value="arc" onClick="ui_arc();" />
     </div>
 
     <body>
