--- a/web/index.html
+++ b/web/index.html
@@ -52,6 +52,11 @@
     <input type="button" value="gameOff" onClick="game_off();" />
 </div>
 -->
+    <div id="my_div" style="background: cornsilk; position: relative; z-index: 2; width: 600px; height: 30px">
+        <input type="button" value="gameOn" onClick="game_on();" />
+        <input type="button" value="gameOff" onClick="game_off();" />
+        <input type="button" value="gameClick" onClick="game_click();" />
+    </div>
 
     <body>
         <script>
