마우스 이벤트와 버튼 이벤트 기능 호환 가능

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <input type="button" value="down" onClick="water_down();" />
     <input type="button" value="gameOn" onClick="game_on();" style="margin-left: 50px" />
     <input type="button" value="gameOff" onClick="game_off();" />
+    <input type="button" value="gameClick" onClick="game_click();" />
 </div>
 -->
 
